FrutaPuta redesign and portfolio upload

--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
 
     <link rel="stylesheet" href="css/style.css" />
 
-    <title>Niv Ginat - Graphic Design & Product Direction</title>
+    <title>FrutaPuta - Art with a twist of papaya</title>
 
     <!-- Open Graph meta tags -->
     <meta
       property="og:title"
-      content="Niv Ginat - Graphic Design & Product Direction"
+      content="FrutaPuta - Art with a Twist of Papaya"
     />
     <meta
       property="og:description"
@@ -40,9 +40,7 @@
     <div class="container">
       <nav id="navigation" class="navbar-expand-md navbar-black bg-black row">
         <div class="logo col-8">
-          <a href="index.html">
-            <p>niv<span class="text-highlight">ginat</span></p></a
-          >
+          <a href="index.html"> <p>FRUTAPUTA</p></a>
         </div>
 
         <button
@@ -65,17 +63,6 @@
               <li class="nav-item">
                 <a class="nav-link active" href="../index.html">Work</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="about.html">About</a>
-              </li>
-              <li class="nav-item">
-                <a
-                  class="nav-link"
-                  target="_blank"
-                  href="https://www.behance.net/nivginatc07e"
-                  >Behance</a
-                >
-              </li>
             </ul>
           </div>
 
@@ -95,18 +82,30 @@
           </div>
         </div>
       </nav>
-
-      <div id="filters" class="button-group">
-        <button class="button is-checked" data-filter="*">All</button>
-        <button class="button" data-filter=".branding">Branding</button>
-        <button class="button" data-filter=".packaging">Packaging</button>
-        <button class="button" data-filter=".print">Print</button>
-        <button class="button" data-filter=".ux_ui">UI/UX</button>
-        <button class="button" data-filter=".art">Art</button>
+      <div class="row">
+        <div class="col-lg-12">
+          <div>
+            <video style="width: 100%" autoplay loop muted playsinline>
+              <source src="video/FP_movie.mp4" type="video/mp4" />
+            </video>
+          </div>
+        </div>
       </div>
 
-      <div id="work" class="row grid">
-        <div class="col-lg-8 col-md-6 work-item element-item print grid-item">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="introduction-text">
+            <h1>
+              Graphic designer and artist from Los Angeles!
+              <!-- <span> <img src="images/thumbnails/pdfs/Vizuri-ebook.jpg" /></span
+            > -->I think Paul McCartney is the best Beatle.
+            </h1>
+          </div>
+        </div>
+      </div>
+
+      <div id="work" class="row">
+        <div class="col-lg-4 col-md-6 work-item element-item print grid-item">
           <a href="projects/felix-homes.html">
             <img src="images/thumbnails/felixhomes-thumbnail.jpg" />
             <h3>Felix Homes</h3>
@@ -140,16 +139,6 @@
           </a>
         </div>
 
-        <div
-          class="col-lg-4 col-md-6 work-item element-item branding ux_ui grid-item"
-        >
-          <a href="projects/propertyhedge.html">
-            <img src="images/thumbnails/propertyhedge-thumbnail.jpg" />
-            <h3>Propertyhedge</h3>
-            <h4>Branding</h4>
-          </a>
-        </div>
-
         <div class="col-lg-4 col-md-6 work-item element-item art grid-item">
           <a href="projects/nightstand.html">
             <img src="images/thumbnails/nightstand_thumbnail_2.png" />
@@ -157,22 +146,9 @@
             <h4>Personal Project</h4>
           </a>
         </div>
-        <div class="col-lg-8 col-md-6 work-item element-item ux_ui grid-item">
-          <a href="projects/milo.html">
-            <video autoplay loop muted playsinline>
-              <source
-                src="video/video_3_milos_rotation_low-1.mp4"
-                type="video/mp4"
-              />
-            </video>
-
-            <h3>Milo</h3>
-            <h4>Web Design + Marketing</h4>
-          </a>
-        </div>
 
         <div
-          class="col-lg-6 col-md-6 work-item element-item branding grid-item"
+          class="col-lg-4 col-md-6 work-item element-item branding grid-item"
         >
           <a href="projects/assorted-logos.html">
             <img
@@ -183,149 +159,11 @@
             <h4>Branding</h4>
           </a>
         </div>
-
-        <div
-          class="col-lg-8 col-md-6 work-item element-item branding packaging grid-item"
-        >
-          <a href="projects/cairo-crayons.html">
-            <video autoplay loop muted playsinline>
-              <source
-                src="video/cairo-crayon-animation_2.mp4"
-                type="video/mp4"
-              />
-            </video>
-            <h3>Cairo Crayons</h3>
-            <h4>Branding + Packaging</h4>
-          </a>
-        </div>
-
-        <div class="col-lg-4 col-md-6 work-item element-item print grid-item">
-          <a href="projects/album-covers.html">
-            <img src="images/thumbnails/album-covers_thumbnails.jpg" />
-            <h3>Album Covers</h3>
-            <h4>Series</h4>
-          </a>
-        </div>
-
-        <div
-          class="col-lg-4 col-md-6 work-item element-item print branding grid-item"
-        >
-          <a href="projects/kcrw-summer-nights.html">
-            <img src="images/thumbnails/kcrw-thumbnail.jpg" />
-            <h3>KCRW Summer Nights</h3>
-            <h4>Branding + Print</h4>
-          </a>
-        </div>
-
-        <div class="col-lg-4 col-md-6 work-item element-item ux_ui grid-item">
-          <a href="projects/caavo.html">
-            <img src="images/thumbnails/caavo-thumbnail.jpg" />
-            <h3>Caavo</h3>
-            <h4>UI/UX</h4>
-          </a>
-        </div>
-
-        <div class="col-lg-2 col-md-6 work-item element-item art grid-item">
-          <a href="projects/stencil.html">
-            <img src="images/thumbnails/stencil_thumbnail.jpg" />
-            <h3>Stencil</h3>
-            <h4>Print Project</h4>
-          </a>
-        </div>
-        <div class="col-lg-3 col-md-6 work-item element-item art grid-item">
-          <a href="projects/stencil.html">
-            <img src="images/thumbnails/stencil_thumbnail.jpg" />
-            <h3>Stencil</h3>
-            <h4>Print Project</h4>
-          </a>
-        </div>
-
-        <!--<div class="col-lg-3 col-md-6 work-item element-item art grid-item">
-          <a href="projects/street-tiles.html">
-            <!- <video autoplay loop muted playsinline>
-              <source src="video//version1.mp4" type="video/mp4" />
-            </video>->
-            <img src="images/thumbnails/street-tiles_thumbnail.jpg" />
-            <h3>Street Tiles</h3>
-            <h4>Art</h4>
-          </a>
-        </div> -->
       </div>
-      <!--
-      <div id="more-work" class="row">
-        <div class="col-12 introduction-text">
-          <h1>More stuff</h1>
-        </div>
-
-        <div class="col-md-3 more-work-item">
-          <a target="_blank" 0href="pdf/UCLA Infographic_v4.pdf">
-            <img src="images/thumbnails/pdfs/UCLA_infographic.jpg" />
-            <h3>UCLA - Infographic Flyer</h3>
-          </a>
-        </div>
-
-        <div class="col-md-3 more-work-item">
-          <a target="_blank" href="pdf/ARTSAMO_Style-Guide_v5.pdf">
-            <img src="images/thumbnails/pdfs/art-samo_style-guide.jpg" />
-            <h3>Art Samo - Brand Guidelines</h3>
-          </a>
-        </div>
-        <div class="col-md-3 more-work-item">
-          <a target="_blank" href="pdf/ii_Visual_ID_10-18-18.pdf">
-            <img src="images/thumbnails/pdfs/II_branding-deck.jpg" />
-            <h3>Institutional Investor - Visual ID</h3>
-          </a>
-        </div>
-
-        <div class="col-md-3 more-work-item">
-          <a target="_blank" href="pdf/180716_AEM_DevOpsAutomation.pdf">
-            <img src="images/thumbnails/pdfs/aem-devops.jpg" />
-            <h3>AEM - DevOps Automation Service Catalog</h3>
-          </a>
-        </div>
-
-        <div class="col-md-3 more-work-item">
-          <a target="_blank" href="pdf/Vizuri_Case Study.pdf">
-            <img src="images/thumbnails/pdfs/Vizuri-ebook.jpg" />
-            <h3>Vizuri - Insurance Handbook</h3>
-          </a>
-        </div>
-
-        <div class="col-md-3 more-work-item">
-          <a target="_blank" href="pdf/Seam Technic Booklet.pdf">
-            <img src="images/thumbnails/pdfs/seam-product-outline.jpg" />
-            <h3>Seam - Product Outline</h3>
-          </a>
-        </div>
-
-        <div class="col-md-3 more-work-item">
-          <a
-            target="_blank"
-            href="https://grow.greenhouse.io/workplace-intelligence/p/1"
-          >
-            <img
-              src="../images/thumbnails/pdfs/greenhouse-intelligence_thumbnail.jpg"
-            />
-            <h3>Greenhouse - Intelligence Report</h3>
-          </a>
-        </div>
-
-        <div class="col-md-3 more-work-item">
-          <a
-            target="_blank"
-            href="https://grow.greenhouse.io/workplace-intelligence/p/1"
-          >
-            <img
-              src="../images/thumbnails/pdfs/greenhouse-intelligence_thumbnail.jpg"
-            />
-            <h3>Greenhouse - Intelligence Report</h3>
-          </a>
-        </div>
-      </div>-->
 
       <div class="footer">
         <p>
-          © Niv Ginat Design 2023
+          © Niv Ginat Design 2024
           <span class="text-highlight">All rights reserved.</span>
         </p>
       </div>
