Updated to navbar, video and extra project

--- a/index.html
+++ b/index.html
@@ -39,13 +39,16 @@
   </head>
   <body>
     <div class="container">
-      <nav id="navigation" class="navbar-expand-md navbar-black bg-black row">
+      <nav
+        id="navigation"
+        class="navbar-expand-md navbar-black bg-black row d-flex justify-content-between"
+      >
         <div class="logo col-4">
           <a href="index.html"> <img src="images/frutaputa_logo.png" /></a>
         </div>
 
         <button
-          class="navbar-toggler x-button col-4"
+          class="navbar-toggler x-button col-8"
           type="button"
           data-bs-toggle="collapse"
           data-bs-target="#navbarNav"
@@ -58,7 +61,10 @@
           </div>
         </button>
 
-        <div class="collapse navbar-collapse" id="navbarNav">
+        <div
+          class="collapse navbar-collapse col-lg-8 justify-content-end"
+          id="navbarNav"
+        >
           <div class="col-lg-4">
             <ul class="nav navbar-nav">
               <li class="nav-item">
@@ -97,15 +103,17 @@
           </video>
         </div>
       </div>
-      -
 
       <div class="row">
-        <div class="col-md-10">
+        <div class="col-md-9">
           <div class="introduction-text">
             <h1>
-              From Los Angeles to Madrid, FrutaPuta is a creative creating
-              creations with frutas and putas.
-              <span> <a href="#"> Let's do something!</a></span>
+              From Los Angeles to Madrid, FrutaPuta is making stuff.
+              <span>
+                <a href="mailto: niv.ginat@gmail.com">
+                  Let's make stuff together!</a
+                ></span
+              >
             </h1>
           </div>
         </div>
@@ -119,23 +127,23 @@
               id="logoCollectionImage"
             />
             <h3>Care Packages</h3>
-            <h4>Branding + Art Direction</h4>
+            <h4>Nashville, 2021</h4>
           </a>
         </div>
 
         <div class="col-lg-4 col-md-6 work-item element-item print grid-item">
           <a href="#">
             <img src="images/mural/funfun_thumbnail.jpg" />
-            <h3>Mural</h3>
-            <h4>Print</h4>
+            <h3>Funfun Mural</h3>
+            <h4>Madrid, 2023</h4>
           </a>
         </div>
 
         <div class="col-lg-4 col-md-6 work-item element-item print grid-item">
           <a href="#">
             <img src="images/Eleanor/eleanor_thumbnail.png" />
-            <h3>Eleanor</h3>
-            <h4>Print</h4>
+            <h3>Eleanor Tiles</h3>
+            <h4>Madrid, 2024</h4>
           </a>
         </div>
         <div class="col-lg-4 col-md-6 work-item element-item print grid-item">
@@ -144,8 +152,8 @@
               <source src="video//version1.mp4" type="video/mp4" />
             </video>
             <!-- <img src="images/thumbnails/street-tiles_thumbnail.jpg" /> -->
-            <h3>Street Tiles</h3>
-            <h4>Art</h4>
+            <h3>Tikva Tiles</h3>
+            <h4>Madrid, 2023</h4>
           </a>
         </div>
 
@@ -154,8 +162,8 @@
         >
           <a href="#">
             <img src="images/thumbnails/Silvia.png" />
-            <h3>Painting</h3>
-            <h4>Branding</h4>
+            <h3>Papaya Still Life</h3>
+            <h4>Los Angeles, 2023</h4>
           </a>
         </div>
 
@@ -163,7 +171,15 @@
           <a href="#">
             <img src="images/thumbnails/nightstand_thumbnail_2.png" />
             <h3>FrutaPuta Nightstand</h3>
-            <h4>Personal Project</h4>
+            <h4>Nashville, 2021</h4>
+          </a>
+        </div>
+
+        <div class="col-lg-4 col-md-6 work-item element-item art grid-item">
+          <a href="#">
+            <img src="images/thumbnails/ms_thumbnail.png" />
+            <h3>Gift for Mitch & Sara</h3>
+            <h4>Nashville, 2022</h4>
           </a>
         </div>
       </div>
